<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_blackboard"
            android:icon="@drawable/ic_menu_blackboard"
            android:title="@string/blackboard" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_menu_reservations"
            android:title="@string/reservations" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/signout"
        android:title="@string/signout" />

</menu>
